--- a/admin/info-center-project.html
+++ b/admin/info-center-project.html
@@ -306,7 +306,54 @@
                     </div>
 
                 </div>
+                <!--创建项目完成-->
+                <div class="panel panel-default">
+                    <div class="panel-heading panel-danger">
+                        <div class="row">
+                            <div class="col-lg-6">创建项目完成</div>
+                            <div class="col-lg-6 text-right">
+                                <!-- Small button group -->
 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel-body">
+                        <div class="media pt10 ren-newest-info">
+                            <a class="pull-left" href="#" data-toggle="popover" data-trigger="focus" title="Dismissible popover" data-content="And here's some amazing content. It's very engaging. Right?">
+                                <img class="media-object" src="../img/project/1.jpg" alt="50*50" title="50*50" style="height:50px; ">
+                            </a>
+
+
+                            <div class="media-body pl15">
+                                <div class="row">
+                                    <div class="col-lg-11">
+                                        <dl>
+                                            <dt>
+                                                <span class="sender-and-recipients fz12">
+
+                                                    <a href="#/group?id=10279195" class="msg-receiver">
+                                                        <span class="receiver-square" style="background-color:#336699"></span>xxxx项目
+                                                    </a>
+                                                    于2014年10月15日 11:30:50 成功创建。
+
+                                                </span>
+                                            </dt>
+                                            <dd class="fz12">
+                                                现在你可以
+                                                <a href="#" class="btn btn-primary btn-xs" data-toggle="modal" data-target=".ren-invite-rating-modal-lg" onclick="location.href='project-workshop-1.html'">进入项目工作室</a>
+                                            </dd>
+                                        </dl>
+                                    </div>
+                                    <div class="col-lg-1">
+
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
