--- a/admin/project-workshop-3.html
+++ b/admin/project-workshop-3.html
@@ -57,102 +57,6 @@
                         <button type="button" class="btn btn-default  disabled">结束</button>
                     </div>
                 </div>
-                <!--<div class="panel panel-default">
-                    <div class="panel-heading">项目经理</div>
-                    <div class="panel-body">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">TA的能力</div>
-                            <div class="panel-body">
-                                <div class="row">
-                                    <div class="col-lg-12">
-                                        XX能力
-                                        <a href="#"><img src="../img/all_star.png" alt="..." class="img-circle"></a>
-                                        <a href="#"><img src="../img/all_star.png" alt="..." class="img-circle"></a>
-                                        <a href="#"><img src="../img/all_star.png" alt="..." class="img-circle"></a>
-                                        <a href="#"><img src="../img/all_star.png" alt="..." class="img-circle"></a>
-                                        <a href="#"><img src="../img/all_star.png" alt="..." class="img-circle grayscale"></a>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-lg-12">
-                                        XX能力
-                                        <a href="#"><img src="../img/all_star.png" alt="..." class="img-circle"></a>
-                                        <a href="#"><img src="../img/all_star.png" alt="..." class="img-circle"></a>
-                                        <a href="#"><img src="../img/all_star.png" alt="..." class="img-circle"></a>
-                                        <a href="#"><img src="../img/all_star.png" alt="..." class="img-circle"></a>
-                                        <a href="#"><img src="../img/all_star.png" alt="..." class="img-circle grayscale"></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel panel-default">
-                            <div class="panel-heading">TA的徽章</div>
-                            <div class="panel-body">
-                                <a href="#" title="好市民徽章" alt="徽章"><img src="../img/badge/good-citizen.png" alt="..." class="img-circle"></a>
-                                <a href="#" title="努力工作徽章" alt="徽章"><img src="../img/badge/hard-worker.png" alt="..." class="img-circle"></a>
-                                <a href="#" title="家庭好帮手徽章" alt="徽章"><img src="../img/badge/homework-helper.png" alt="..." class="img-circle"></a>
-                                <a href="#" title="练习徽章" alt="徽章"><img src="../img/badge/participant.png" alt="..." class="img-circle"></a>
-                                <a href="#" title="完美徽章" alt="徽章"><img src="../img/badge/perfect-attendance.png" alt="..." class="img-circle grayscale"></a>
-                                <a href="#" title="星级徽章" alt="徽章"><img src="../img/badge/star-performer.png" alt="..." class="img-circle grayscale"></a>
-                                <a href="#" title="学生月徽章" alt="徽章"><img src="../img/badge/student-month.png" alt="..." class="img-circle grayscale"></a>
-
-                            </div>
-                        </div>
-                        <div class="panel panel-default">
-                            <div class="panel-heading">TA的标签</div>
-                            <div class="panel-body">
-                                <span class="label label-default">初二学生</span>
-                                <span class="label label-primary">数学达人</span>
-                                <span class="label label-success">中学生geek党</span>
-                                <span class="label label-info">机器人爱好者</span>
-                                <span class="label label-warning">小说爱好者</span>
-                                <span class="label label-danger">游戏迷</span>
-                                <button class="btn btn-xs btn-success" data-toggle="modal" data-target="#tag-modal"><span class="glyphicon glyphicon-pencil small"></span> 给TA贴标签</button>
-                                <div class="modal fade" id="tag-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                                <h4 class="modal-title" id="myModalLabel">给TA贴标签</h4>
-                                            </div>
-                                            <div class="modal-body">
-                                                <form class="form-horizontal" method="post">
-                                                    <div class="form-group">
-                                                        <label class="col-sm-2 control-label" for="addTag">添加标签</label>
-                                                        <div class="col-sm-9">
-                                                            <input type="text" id="add-tag" class="form-control" name="tagnames" placeholder="输入标签，标签间请用空格间隔">
-                                                        </div>
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <label class="col-sm-2 control-label" for="inputgs">可能喜欢</label>
-                                                        <div class="col-sm-9">
-                                                            <h4>
-                                                                <span class="label label-info cursor">动漫</span>
-                                                                <span class="label label-info cursor">学生</span>
-                                                                <span class="label label-info cursor">搞笑</span>
-                                                                <span class="label label-info cursor">校园</span>
-                                                            </h4>
-                                                        </div>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <a href="#" data-dismiss="modal">取消</a>
-                                                <button type="button" class="btn btn-primary tag-ok">确定</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel panel-default">
-                            <div class="panel-heading">写评语</div>
-                            <div class="panel-body">
-                                <textarea rows="3" class="form-control" id="physical-support-description" placeholder="评价…"></textarea>
-                            </div>
-                        </div>
-                    </div>
-                </div>-->
                 <div class="panel panel-default">
                     <!--<div class="panel-heading">小组成员</div>-->
                     <div class="panel-body">
@@ -209,13 +113,19 @@
                                         <div class="panel panel-default">
                                             <div class="panel-heading">TA的标签</div>
                                             <div class="panel-body">
-                                                <span class="label label-default">初二学生</span>
-                                                <span class="label label-primary">数学达人</span>
-                                                <span class="label label-success">中学生geek党</span>
-                                                <span class="label label-info">机器人爱好者</span>
-                                                <span class="label label-warning">小说爱好者</span>
-                                                <span class="label label-danger">游戏迷</span>
-                                                <button class="btn btn-xs btn-success" data-toggle="modal" data-target="#tag-modal"><span class="glyphicon glyphicon-pencil small"></span> 给TA贴标签</button>
+                                                <span class="label label-default" style="display: inline-block;">初二学生</span>
+                                                <span class="label label-primary" style="display: inline-block;">数学达人</span>
+                                                <span class="label label-success" style="display: inline-block;">中学生geek党</span>
+                                                <span class="label label-info" style="display: inline-block;">机器人爱好者</span>
+                                                <span class="label label-warning" style="display: inline-block;">小说爱好者</span>
+                                                <span class="label label-danger" style="display: inline-block;">游戏迷</span>
+                                                <span class="label label-default" style="display: inline-block;">初二学生</span>
+                                                <span class="label label-primary" style="display: inline-block;">数学达人</span>
+                                                <span class="label label-success" style="display: inline-block;">中学生geek党</span>
+                                                <span class="label label-info" style="display: inline-block;">机器人爱好者</span>
+                                                <span class="label label-warning" style="display: inline-block;">小说爱好者</span>
+                                                <span class="label label-danger" style="display: inline-block;">游戏迷</span>
+                                                <button style="margin-top:3px;" class="btn btn-xs btn-success" data-toggle="modal" data-target="#tag-modal"><span class="glyphicon glyphicon-pencil small"></span> 给TA贴标签</button>
                                                 <div class="modal fade" id="tag-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                                                     <div class="modal-dialog">
                                                         <div class="modal-content">
