--- a/admin/start-project-1.html
+++ b/admin/start-project-1.html
@@ -258,7 +258,7 @@
                                                 <img class="media-object" id="preview-img" width="220" height="150" style="width:220px;height:150px;" src="../img/bg_plists_thumb.png" alt="220*150">
 
                                             </a>
-                                        </div><div style="color:#808080;font-size:13px;" class="martop10">目标:</div>
+                                        </div><!--<div style="color:#808080;font-size:13px;" class="martop10">目标:</div>-->
                                     </div>
                                 </div>
                             </div>
