--- a/admin/my-project-join.html
+++ b/admin/my-project-join.html
@@ -151,7 +151,7 @@
                                     </div>
                                     <div class="dot"></div>
                                     <div class="item-rate clearfix small">
-                                        <button class="btn btn-info btn-block btn-sm" onclick="location.href = 'start-project-1.html'"><span class="glyphicon glyphicon-import"></span> 进入项目工作室</button>
+                                        <button class="btn btn-info btn-block btn-sm" onclick="location.href = 'project-workshop-1.html'"><span class="glyphicon glyphicon-import"></span> 进入项目工作室</button>
                                     </div>
                                 </div>
                             </div>
@@ -180,7 +180,7 @@
                                     </div>
                                     <div class="dot"></div>
                                     <div class="item-rate clearfix small">
-                                        <button class="btn btn-info btn-block btn-sm" onclick="location.href = 'start-project-1.html'"><span class="glyphicon glyphicon-import"></span> 进入项目工作室</button>
+                                        <button class="btn btn-info btn-block btn-sm" onclick="location.href = 'project-workshop-1.html'"><span class="glyphicon glyphicon-import"></span> 进入项目工作室</button>
                                     </div>
                                 </div>
                             </div>
@@ -209,7 +209,7 @@
                                     </div>
                                     <div class="dot"></div>
                                     <div class="item-rate clearfix small">
-                                        <button class="btn btn-info btn-block btn-sm" onclick="location.href = 'start-project-1.html'"><span class="glyphicon glyphicon-import"></span> 进入项目工作室</button>
+                                        <button class="btn btn-info btn-block btn-sm" onclick="location.href = 'project-workshop-1.html'"><span class="glyphicon glyphicon-import"></span> 进入项目工作室</button>
                                     </div>
                                 </div>
                             </div>
