--- a/admin/start-project-2.html
+++ b/admin/start-project-2.html
@@ -45,9 +45,6 @@
             <div class="row">
                 <div class="btn-group btn-group-justified marbottom15">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-primary active disabled">发起项目声明</button>
-                    </div>
-                    <div class="btn-group">
                         <button type="button" class="btn btn-primary active disabled">基本信息</button>
                     </div>
                     <div class="btn-group">
@@ -316,8 +313,9 @@
                                                 </div>
                                             </div>
                                             <div class="form-group">
-                                                <div class=" col-sm-12">
-                                                    <button type="submit" class="btn btn-primary pull-right">下一步</button>
+                                                <div class=" col-sm-12 text-right">
+                                                    <button type="button" class="btn btn-primary" onclick="window.location.href='start-project-1.html'">上一步</button>
+                                                    <button type="submit" class="btn btn-primary">下一步</button>
                                                 </div>
                                             </div>
                                         </form>
