--- a/admin/start-project-4.html
+++ b/admin/start-project-4.html
@@ -591,9 +591,13 @@
                     </div>
 
 
-
-
-                    <button class="btn btn-primary" onclick="window.location.href='start-project-5.html'">下一步</button>
+                    <div class="row">
+                        <div class="col-lg-12 text-right">
+                            <button type="button" class="btn btn-primary" onclick="window.location.href='start-project-3.html'">上一步</button>
+                            <button class="btn btn-primary" onclick="window.location.href='start-project-5.html'">下一步</button>
+                        </div>
+                    </div>
+                   
 
 
                 </div>
