--- a/admin/start-project-5.html
+++ b/admin/start-project-5.html
@@ -107,8 +107,9 @@
                     </div>
                     <div class="panel-footer text-center">
                         <a href="#" class="marginr20">存草稿</a>
+                        <button type="button" class="btn btn-primary" onclick="window.location.href='start-project-4.html'">上一步</button>
                         <!--onclick="window.location.href='start-project-1.html'"-->
-                        <button class="btn btn-primary at-once-publish">发布</button>
+                        <button class="btn btn-primary at-once-publish" onclick="window.location.href = 'info-center-project.html'">发布</button>
                     </div>
                 </div>
             </div>
