--- a/admin/group-post-details .html
+++ b/admin/group-post-details .html
@@ -112,7 +112,19 @@
                     </div>
                     <div class="row paddrow" style="margin-top:20px;">
                         <a href="#" class="on">回应</a>
-                        <hr style="background-color:#ddd" />
+                        <span class="pull-right fz12">
+                             
+                            <a href="javascript:void(0)" class="marleft10">
+                                <span class="glyphicon glyphicon-share"> </span><span class="total-reply">转发 </span>
+                            </a> &nbsp;
+                            <a href="javascript:void(0)" class="marleft10">
+                                <span class="glyphicon glyphicon-star"> </span><span class="total-reply">收藏 </span>
+                            </a>&nbsp;
+                            <a href="javascript:void(0)" class="marleft10">
+                                <span class="glyphicon glyphicon-share"> </span><span class="total-reply">举报 </span>
+                            </a>
+                        </span>
+                        <hr class="clearfix" style="background-color:#ddd" />
                     </div>
                     <div class="row paddrow">
                         <!------------------------------评论列表-------------------------------->
