--- a/admin/start-project-3.html
+++ b/admin/start-project-3.html
@@ -352,13 +352,20 @@
                                             <!------------------------------------------------------众筹基本设置------------------------------------------------------------------>
 
                                             <div class="form-group">
-                                                <label for="project-url" class="col-sm-2 control-label">众筹基本设置</label>
+                                                <label for="raise-public-all-money" class="col-sm-2 control-label">众筹基本设置</label>
                                                 <div class="col-sm-3">
-                                                    <input type="text" class="form-control" id="project-url" placeholder="总金额">
+                                                    <input type="text" class="form-control" id="raise-public-all-money" placeholder="总金额">
                                                 </div>
                                                 <div class="col-sm-7 paddtop2">
                                                     /10000 <span class="marleft10">总金额不能超过预算中值</span>
                                                 </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="raise-public-time" class="col-sm-2 control-label"></label>
+                                                <div class="col-sm-3">
+                                                    <input type="text" class="form-control" id="raise-public-time" placeholder="众筹时间">
+                                                </div>
+                                                <div class="col-sm-5 padding0 paddtop2"> 天&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;最多90天  </div>
                                             </div>
                                             <div class="form-group">
                                                 <label for="project-url" class="col-sm-2 control-label"></label>
