--- a/admin/project-workshop-1.html
+++ b/admin/project-workshop-1.html
@@ -62,45 +62,81 @@
             </div>
             <div class="row">
                 <div class="col-lg-7" style="padding-left:0px;">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">足迹</div>
-                        <div class="panel-body">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <textarea rows="3" class="form-control" id="footprints-description" placeholder="足迹描述…"></textarea>
-                                </div>
-                            </div>
-                            <div class="row martop10">
-                                <div class="col-lg-7">
-                                    <a href="#">添加地理位置</a>&nbsp;
-                                    <span>2014-10-14</span>
-                                    <div class="btn-group btn-group-sm">
-                                        <button type="button" class="btn btn-default ren-btn-tooltip" data-toggle="tooltip" data-placement="bottom" title="图片"><span class="glyphicon glyphicon-camera"></span> <span class="sr-only">图片</span></button>
-                                        <button type="button" class="btn btn-default ren-btn-tooltip" data-toggle="tooltip" data-placement="bottom" title="视频"><span class="glyphicon glyphicon-film"></span> <span class="sr-only">视频</span></button>
-                                        <button type="button" class="btn btn-default ren-btn-tooltip" data-toggle="tooltip" data-placement="bottom" title="链接"><span class="glyphicon glyphicon-link"></span> <span class="sr-only">链接</span></button>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">足迹</div>
+                                <div class="panel-body">
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <textarea rows="3" class="form-control" id="footprints-description" placeholder="足迹描述…"></textarea>
+                                        </div>
+                                    </div>
+                                    <div class="row martop10">
+                                        <div class="col-lg-7">
+                                            <a href="#">添加地理位置</a>&nbsp;
+                                            <span>2014-10-14</span>
+                                            <div class="btn-group btn-group-sm">
+                                                <button type="button" class="btn btn-default ren-btn-tooltip" data-toggle="tooltip" data-placement="bottom" title="图片"><span class="glyphicon glyphicon-camera"></span> <span class="sr-only">图片</span></button>
+                                                <button type="button" class="btn btn-default ren-btn-tooltip" data-toggle="tooltip" data-placement="bottom" title="视频"><span class="glyphicon glyphicon-film"></span> <span class="sr-only">视频</span></button>
+                                                <button type="button" class="btn btn-default ren-btn-tooltip" data-toggle="tooltip" data-placement="bottom" title="链接"><span class="glyphicon glyphicon-link"></span> <span class="sr-only">链接</span></button>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-5 text-right">
+                                            <button type="button" class="btn btn-default btn-sm">发送</button>
+                                            <button type="button" class="btn btn-default btn-sm">分享到SNS账号</button>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-5 text-right">
-                                    <button type="button" class="btn btn-default btn-sm">发送</button>
-                                    <button type="button" class="btn btn-default btn-sm">分享到SNS账号</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel-footer text-right">
-                            <div class="row">
-                                <div class="col-lg-6 text-left">
-                                   
-                                    <a href="../project-view.html">查看项目主页</a>
-                                </div>
-                                <div class="col-lg-6">
-                                    <button type="button" class="btn btn-primary" onclick="window.location.href='project-workshop-2.html'">下一步</button>
-                                </div>
-                            </div>
-                        </div>
+                                <div class="panel-footer text-right">
+                                    <div class="row">
+                                        <div class="col-lg-6 text-left">
 
-                        <!--<div class="panel-footer text-right">
-                           <button class="btn btn-primary">下一步</button>
-                        </div>-->
+                                            <a href="../project-view.html">查看项目主页</a>
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <button type="button" class="btn btn-primary" onclick="window.location.href='project-workshop-2.html'">下一步</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!--<div class="panel-footer text-right">
+           <button class="btn btn-primary">下一步</button>
+        </div>-->
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">任务列表</div>
+                                <div class="panel-body">
+                                    <table class="table table-bordered text-center mission-list-table" style="margin-bottom:0px;">
+                                        <tr>
+                                            <td width="50">序号</td>
+                                            <td width="50">里程碑</td>
+                                            <td width="50">任务</td>
+                                            <td width="50">任务描述</td>
+                                            <td width="50">开始时间</td>
+                                            <td width="50">结束时间</td>
+                                            <td width="50">负责人</td>
+                                            <td width="50">操作</td>
+                                        </tr>
+                                        <tr>
+                                            <td>01</td>
+                                            <td>XXXXX</td>
+                                            <td>XXXXX</td>
+                                            <td></td>
+                                            <td>2014-10-17</td>
+                                            <td>2014-10-31</td>
+                                            <td>张三，李四</td>
+                                            <td>修改  忽略</td>
+                                        </tr>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-5" style="padding-right:0px;">
