--- a/admin/start-project-2.html
+++ b/admin/start-project-2.html
@@ -242,7 +242,7 @@
                                                         <tr>
                                                             <td>收入/支出</td>
                                                             <td>类别</td>
-                                                            <td>摘要</td>
+                                                            <td>名称</td>
                                                             <td>单价</td>
                                                             <td>数量</td>
                                                             <td>金额</td>
@@ -282,7 +282,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-5">
-                                                    <input type="text" class="form-control" id="project-budget-abstract" placeholder="摘要">
+                                                    <input type="text" class="form-control" id="project-budget-abstract" placeholder="物品名称">
                                                 </div>
                                             </div>
                                             <div class="form-group text-left">
